# ha-kc100

./: .gitignore  CLAUDE.md  Makefile  README.md  cli.py  prek.toml  pyproject.toml  webapp.html  webapp.py  webapp.toml.example
custom_components/kc100/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  select.py  sensor.py  strings.json  switch.py
custom_components/kc100/translations/: en.json
docs/: develop.md  technical.md
