[project]
name = "ha-kc100"
version = "0.0.1"
requires-python = ">=3.14.2"

[dependency-groups]
dev = [
    "aiohttp",
    "fastapi",
    "homeassistant",
    "python-multipart",
    "ty",
    "typer",
    "uvicorn",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "PL",
    "RUF",
    "PIE",
    "RET",
    "PERF",
    "FURB",
    "LOG",
    "G",
    "T20",
    "PTH",
    "TID",
]

ignore = [
    "PLR09",
    "PLR2004",
    "PLW2901",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["T201"]
"webapp.py" = ["T201"]

[tool.ty.environment]
extra-paths = ["custom_components", "custom_components/kc100"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = ["custom_components", "custom_components/kc100"]
reportIncompatibleVariableOverride = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
